--- a/src/components/organisers/View/style.css
+++ b/src/components/organisers/View/style.css
@@ -146,7 +146,7 @@
 .organiserCardTitle {
   font-size: 24px;
   font-family: "NeuePlakBold";
-  color: rgba(0, 0, 0, 0.85);
+  color: #231f20;
   padding-top: 12px;
   padding-bottom: 12px;
   margin: 0px;
